--- a/miniprogram/public/components/public/table/table.wxml
+++ b/miniprogram/public/components/public/table/table.wxml
@@ -1,19 +1,81 @@
 <wxs src="./table.wxs" module="table" />
 <view class="list" style="heigth:{{tableHeight}}">
-  <scroll-view class="table-header" scroll-x="{{scrollX}}" bindscroll="handleScroll" bindtouchstart="handleTouchStart" bindtouchend="handleTouchEnd" data-tag="header" scroll-left="{{scrollLeftHeader}}">
+  <scroll-view
+    class="table-header"
+    scroll-x="{{scrollX}}"
+    bindscroll="handleScroll"
+    bindtouchstart="handleTouchStart"
+    bindtouchend="handleTouchEnd"
+    data-tag="header"
+    scroll-left="{{scrollLeftHeader}}"
+  >
+  <wxs module="utils">var isInclude = function(arr, value) {return arr.indexOf(value) !== -1};module.exports={isInclude: isInclude}</wxs>
     <view class="inline-block">
       <view class="tr tr-th">
         <view class="th select" wx:if="{{select}}"></view>
-        <view class="th" style="width:{{table.computedTdWidth(columns,item, select,scrollX)}};{{index===columns.length-1?'flex-grow:1;flex-shrink:1':''}}" wx:for="{{columns}}" wx:key="key">
+        <view
+          class="{{utils.isInclude(sortedKeys, item.key) ? 'sortable th' : 'th'}}"
+          data-res="{{utils.isInclude(sortedKeys, item.key)}}"
+          data-sort="{{item.key === sortedKey ? sort : ''}}"
+          data-key="{{item.key}}"
+          style="width:{{table.computedTdWidth(columns,item, select,scrollX)}};{{index===columns.length-1?'flex-grow:1;flex-shrink:1':''}}"
+          wx:for="{{columns}}"
+          wx:key="key"
+          bind:tap="triggerThSort"
+        >
           {{item.title}}
+          <view class="arrows">
+            <span class="arrow up"></span>
+            <span class="arrow down"></span>
+          </view>
         </view>
       </view>
     </view>
   </scroll-view>
-  <scroll-view class="scroll-view" scroll-y scroll-x="{{scrollX}}" bindscroll="handleScroll" bindtouchstart="handleTouchStart" bindtouchend="handleTouchEnd" data-tag="content" scroll-left="{{scrollLeftContent}}" scroll-top="{{scrollTop}}" style="height:{{tableScrollViewHeight}}" bindscrolltolower="handleScrolltolower" bindscrolltoupper="handleScrolltoupper" upper-threshold="{{0}}" lower-threshold="{{100}}">
+  <scroll-view
+    class="scroll-view"
+    scroll-y
+    scroll-x="{{scrollX}}"
+    bindscroll="handleScroll"
+    bindtouchstart="handleTouchStart"
+    bindtouchend="handleTouchEnd"
+    data-tag="content"
+    scroll-left="{{scrollLeftContent}}"
+    scroll-top="{{scrollTop}}"
+    style="height:{{tableScrollViewHeight}}"
+    bindscrolltolower="handleScrolltolower"
+    bindscrolltoupper="handleScrolltoupper"
+    upper-threshold="{{0}}"
+    lower-threshold="{{100}}"
+  >
     <view class="table-content" wx:if="{{!showTipImage}}">
-      <zml-tr bindclicklistitem="handleClickListItem" bindclickaction="handleClickAction" bindonactionevent="handleOnActionEvent"  bindclickexpand="handleClickExpand" bindcheckkey="handleClickCheck" wx:for="{{showDataList}}" wx:key="row_key" data-rowkey="{{item[rowKey]}}" rowKey="{{rowKey}}" columns="{{columns}}" item="{{item}}" index="{{index}}" select="{{select}}" scrollX="{{scrollX}}" checked="{{checkObj[item[rowKey]]}}" isExpand="{{isExpand}}" expandValueKey="{{expandValueKey}}" initExpandValue="{{initExpandValue}}" dynamicValue="{{dynamicValue}}" generic:action-td="action-td" generic:expand-component="expand-component"></zml-tr>
-      <zml-load-more tip="{{getListLoading?'请求中':'暂无更多数据'}}" loading="{{ getListLoading }}" />
+      <zml-tr
+        bindclicklistitem="handleClickListItem"
+        bindclickaction="handleClickAction"
+        bindonactionevent="handleOnActionEvent"
+        bindclickexpand="handleClickExpand"
+        bindcheckkey="handleClickCheck"
+        wx:for="{{showDataList}}"
+        wx:key="row_key"
+        data-rowkey="{{item[rowKey]}}"
+        rowKey="{{rowKey}}"
+        columns="{{columns}}"
+        item="{{item}}"
+        index="{{index}}"
+        select="{{select}}"
+        scrollX="{{scrollX}}"
+        checked="{{checkObj[item[rowKey]]}}"
+        isExpand="{{isExpand}}"
+        expandValueKey="{{expandValueKey}}"
+        initExpandValue="{{initExpandValue}}"
+        dynamicValue="{{dynamicValue}}"
+        generic:action-td="action-td"
+        generic:expand-component="expand-component"
+      ></zml-tr>
+      <zml-load-more
+        tip="{{getListLoading?'请求中':'暂无更多数据'}}"
+        loading="{{ getListLoading }}"
+      />
     </view>
     <zml-empty show="{{showTipImage}}" text="{{tipTitle}}" subText="{{tipSubtitle}}"></zml-empty>
   </scroll-view>
